--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -75,3 +75,5 @@ Program.sectMap[".vecs"].loadAddress      = (Core.id + 1) * 0x400;
 Program.sectMap[".resource_table"] = new Program.SectionSpec();
 Program.sectMap[".resource_table"].type = "NOINIT";
 Program.sectMap[".resource_table"].loadSegment = Program.platform.dataMemory;
+
+Program.sectMap[".tracebuf"] = "EXT_DATA";
