DEH: Add a Device Exception Handler (DEH) module
Added a new module ti.deh that notifies host of an error/exception
or unrecoverable error such as no-heap-memory, etc. It saves the
error/exception data in an error buffer.

Signed-off-by: Shahid Akhtar <sakhtar@ti.com>

--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -77,3 +77,4 @@ Program.sectMap[".resource_table"].type = "NOINIT";
 Program.sectMap[".resource_table"].loadSegment = Program.platform.dataMemory;
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
+Program.sectMap[".errorbuf"] = "EXT_DATA";
