--- a/src/ti/configs/omap4430/DucatiCore1.cfg
+++ b/src/ti/configs/omap4430/DucatiCore1.cfg
@@ -38,6 +38,22 @@ MultiProc.setConfig("CORE1", ["HOST", "CORE0", "CORE1", "DSP"]);
 var Core = xdc.useModule('ti.sysbios.family.arm.ducati.Core');
 Core.id = 1;
 
+/* ----------------------------- TICK ---------------------------------------*/
+var Clock = xdc.useModule('ti.sysbios.knl.Clock');
+Clock.tickSource = Clock.TickSource_USER;
+/* Configure GPTimer4 as BIOS clock source */
+Clock.timerId = 1;
+
+var Timer = xdc.useModule('ti.sysbios.timers.dmtimer.Timer');
+var timerParams = new Timer.Params();
+timerParams.period = Clock.tickPeriod;
+timerParams.periodType = Timer.PeriodType_MICROSECS;
+/* Smart-idle wake-up-capable mode */
+timerParams.tiocpCfg.idlemode = 0x3;
+/* Wake-up generation for Overflow */
+timerParams.twer.ovf_wup_ena = 0x1;
+Timer.create(Clock.timerId, Clock.doTick, timerParams);
+
 /*
  * These lines coerce BIOS into creating a unique interrupt vector table for
  * each core. Core 0's interrupt vector table is placed at 0x400, Core 1's
