Configs: Set Non-Posted policy for IPC & Peripheral regions
The IPC and Peripheral regions' policy has been marked to the
default NON_POSTED policy. This is done to ensure that all
r/w(s) within the IPC and peripheral registers reach the
destination and in the same order as intended/issued by the
CPU. This policy avoids the CPU getting any stray interrupts
from peripherals as the order is now guaranteed.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap4430/DucatiAmmu.cfg
+++ b/src/ti/configs/omap4430/DucatiAmmu.cfg
@@ -167,11 +167,10 @@ AMMU.largePages[2].size = AMMU.Large_512M;
 AMMU.largePages[2].L1_cacheable = AMMU.CachePolicy_CACHEABLE;
 AMMU.largePages[2].L1_posted = AMMU.PostedPolicy_POSTED;
 
-/* Peripheral regions: Large Page (512M); non-cacheable */
+/* Peripheral regions: Large Page (512M); non-cacheable, non-posted */
 /* config large page[3] to map 512MB VA 0xA0000000 to L3 0xA0000000 */
 AMMU.largePages[3].pageEnabled = AMMU.Enable_YES;
 AMMU.largePages[3].logicalAddress = 0xA0000000;
 AMMU.largePages[3].translationEnabled = AMMU.Enable_NO;
 AMMU.largePages[3].size = AMMU.Large_512M;
 AMMU.largePages[3].L1_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
-AMMU.largePages[3].L1_posted = AMMU.PostedPolicy_POSTED;
