--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -76,4 +76,4 @@ Program.sectMap[".resource_table"] = new Program.SectionSpec();
 Program.sectMap[".resource_table"].type = "NOINIT";
 Program.sectMap[".resource_table"].loadSegment = Program.platform.dataMemory;
 
-Program.sectMap[".tracebuf"] = "EXT_DATA";
+Program.sectMap[".tracebuf"] = "TRACE_BUF";
