--- a/src/ti/configs/omap4430/DucatiCore1.cfg
+++ b/src/ti/configs/omap4430/DucatiCore1.cfg
@@ -70,4 +70,4 @@ Timer.create(Clock.timerId, Clock.doTick, timerParams);
 Program.sectMap[".resetVecs"].loadAddress = (Core.id + 1) * 0x400;
 Program.sectMap[".vecs"].loadAddress      = (Core.id + 1) * 0x400;
 
-Program.sectMap[".tracebuf"] = "EXT_DATA";
+Program.sectMap[".tracebuf"] = "TRACE_BUF";
