Configs: Move error buffers into the exception memory region
Relocate the .errorbuf section into the new EXC_DATA
memory region.

Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap4430/DucatiCore1.cfg
+++ b/src/ti/configs/omap4430/DucatiCore1.cfg
@@ -71,4 +71,4 @@ Program.sectMap[".resetVecs"].loadAddress = (Core.id + 1) * 0x400;
 Program.sectMap[".vecs"].loadAddress      = (Core.id + 1) * 0x400;
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
-Program.sectMap[".errorbuf"] = "EXT_DATA";
+Program.sectMap[".errorbuf"] = "EXC_DATA";
