--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -77,4 +77,4 @@ Program.sectMap[".resource_table"].type = "NOINIT";
 Program.sectMap[".resource_table"].loadSegment = Program.platform.dataMemory;
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
-Program.sectMap[".errorbuf"] = "EXT_DATA";
+Program.sectMap[".errorbuf"] = "EXC_DATA";
