Build: Add recent new files to ignore list
Couple of new files that were added/generated recently have been
added to the git ignore list.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -34,14 +34,23 @@ package.mak
 *.xe64T
 *.xe674
 *.o
-genbase
 *.sw*
 .tests*
 .nfs*
 *.bin
-readrprc
-wrints
 *.patch
 *.tar
 *.zip
 *patch*
+
+# Utilities & Script Files
+genbase
+readrprc
+wrints
+genextbin
+mmu_ttb_dump.log
+sign_toc.log
+
+# Generated header files from XDC modules
+Deh.h
+SysMin.h
