IPC: Add offload infrastructure
Add simple offloading mechanism so Core1 (AppM3) can execute
arbitrary one argument functions on Core0 (SysM3). The functions
would still reside and be built with the AppM3 baseimage.

This is a temporary solution until a proper inter core communication
mechanism is established. The current solution is designed by
defining new Mailbox message payloads, and having the VirtQueue stack
treat these messages specially.

Change-Id: I28ff44196eaf59b05edfe98201156252851807af
Signed-off-by: Sameer Venkatraman <sameerv@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>
Signed-off-by: Alberto Aguirre <a-aguirre@ti.com>

--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -78,3 +78,10 @@ Program.sectMap[".resource_table"].loadSegment = Program.platform.dataMemory;
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
 Program.sectMap[".errorbuf"] = "EXC_DATA";
+
+/*
+ * Add support for offloading algorithms.
+ * The section is placed at an unused address in the common segment.
+ */
+Program.sectMap[".interm3offload"] = new Program.SectionSpec();
+Program.sectMap[".interm3offload"].loadAddress = 0x2000;
