--- a/src/ti/configs/omap4430/DucatiCore1.cfg
+++ b/src/ti/configs/omap4430/DucatiCore1.cfg
@@ -72,3 +72,10 @@ Program.sectMap[".vecs"].loadAddress      = (Core.id + 1) * 0x400;
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
 Program.sectMap[".errorbuf"] = "EXC_DATA";
+
+/*
+ * Add support for offloading algorithms.
+ * The section is placed at an unused address in the common segment.
+ */
+Program.sectMap[".interm3offload"] = new Program.SectionSpec();
+Program.sectMap[".interm3offload"].loadAddress = 0x2000;
