--- a/src/ti/configs/omap4430/Tesla.cfg
+++ b/src/ti/configs/omap4430/Tesla.cfg
@@ -66,8 +66,8 @@ Power.loadSegment = "PM_DATA";
 /* Idle function that periodically flushes the unicache */
 var Idle = xdc.useModule('ti.sysbios.knl.Idle');
 
-/* IpcPower idle function must be at the end */
-Idle.addFunc('&IpcPower_idle');
+Idle.addFunc('&ti_deh_Deh_idleBegin'); /* Must be placed before pwr mgmt */
+Idle.addFunc('&IpcPower_idle');        /* IpcPower_idle must be at the end */
 
 var HeapBuf   = xdc.useModule('ti.sysbios.heaps.HeapBuf');
 var List      = xdc.useModule('ti.sdo.utils.List');
@@ -107,6 +107,7 @@ Main.common$.diags_ASSERT = Diags.ALWAYS_ON;
 Main.common$.diags_INTERNAL = Diags.ALWAYS_ON;
 
 var Hwi = xdc.useModule('ti.sysbios.family.c64p.Hwi');
+var Deh = xdc.useModule('ti.deh.Deh');
 Hwi.enableException = true;
 
 /* -------------------------------- DSP ----------------------------------*/
@@ -132,3 +133,4 @@ timerParams.twer.ovf_wup_ena = 0x1;
 Timer.create(Clock.timerId, Clock.doTick, timerParams);
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
+Program.sectMap[".errorbuf"] = "EXC_DATA";
