HDMIWA: Add a solution for excessive ACR packet reduction problem
A HW bug in OMAP4430 ES2.0, 2.1 & 2.2 will send excessive ACR Packets
than necessary and leads to AVR inter-op issues and to "CTS Interval"
compliance failures. A SW solution is implemented in Ducati code to
overcome this problem by controlling the ACR_CTRL register using
programmable timer interrupts. The solution is implemented on the BIOS
side due to much more promising interrupt latencies.

Signed-off-by: vamsi krishna k <x0093442@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>
Signed-off-by: Axel Castaneda Gonzalez <x0055901@ti.com>
Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>

--- a/src/ti/examples/srvmgr/test_omx_core0_hdmi.cfg
+++ b/src/ti/examples/srvmgr/test_omx_core0_hdmi.cfg
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, Texas Instruments Incorporated
+ * Copyright (c) 2012, Texas Instruments Incorporated
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -29,35 +29,7 @@
  * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
-/*
- *  ======== package.bld ========
- */
 
-var testBld = xdc.loadCapsule("ti/sdo/ipc/build/test.bld");
-var commonBld = xdc.loadCapsule("ti/sdo/ipc/build/common.bld");
-
-/*
- *  Export everything necessary to build this package with (almost) no
- *  generated files.
- */
-Pkg.attrs.exportAll = true;
-
-/*
- *  ======== testArray ========
- *
- *  Example:
- *    var testArray = [
- *        {name: Test1},
- *        {name: Test2, sources: ["Test"], config: "Test", refOutput: "Test", timeout: "15", buildTargets: ["C64", "C28_large"]}
- *    ];
- */
-
-var testArray = [
-    {name: 'test_omx_sysm3', sources: ["test_omx", "ping_tasks", "resmgr_task", "hwspinlock_task"], config: "test_omx_core0", copts: "-D CORE0", buildPlatforms: ["ti.platform.omap4430.core0"]},
-    {name: 'test_omx_sysm3_hdmi', sources: ["test_omx", "ping_tasks", "resmgr_task", "hwspinlock_task"], config: "test_omx_core0_hdmi", copts: "-D CORE0", buildPlatforms: ["ti.platform.omap4430.core0"]},
-    {name: 'test_omx_appm3', sources: ["test_omx", "ping_tasks", "resmgr_task", "hwspinlock_task"], config: "test_omx_core1", copts: "-D CORE1", buildPlatforms: ["ti.platform.omap4430.core1"]},
-];
-
-arguments = ["profile=debug platform=all"];
-
-testBld.buildTests(testArray, arguments);
+xdc.loadCapsule("ti/configs/omap4430/IpcCommon.cfg.xs");
+xdc.includeFile("ti/configs/omap4430/DucatiCore0Hdmi.cfg");
+xdc.includeFile("ti/configs/omap4430/DucatiAmmu.cfg");
