Build: Select build targets based on CGT environment variables
The build targets are chosen depending on whether its code generation
tools environment variable is set or not. This enables an user to do
a minimal build only for the target that the user is interested in.

In a clean build:
- If only TMS470CGTOOLPATH is set, only M3 target will be built.
- If only C6000CGTOOLPATH is set, only C64 target will be  built
- If both tool path environment variables are set, both C64T and M3
  targets will be built

In a dirty build:
- In order to enable or disable a target, an user would need to export
  or unset the corresponding tool path variable, and touch the
  src/config.bld to have the change become effective.

Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -30,7 +30,15 @@
 # EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-all: readrprc wrints genbase genextbin xdep ducati-m3.bin tesla-dsp.bin
+ifdef TMS470CGTOOLPATH
+	DUCATI = ducati-m3.bin
+endif
+
+ifdef C6000CGTOOLPATH
+	TESLA = tesla-dsp.bin
+endif
+
+all: readrprc wrints genbase genextbin xdep $(DUCATI) $(TESLA)
 
 ducati-m3.bin: ../ti/examples/srvmgr/ti_platform_omap4430_core0/debug/test_omx_sysm3.xem3 ../ti/examples/srvmgr/ti_platform_omap4430_core1/debug/test_omx_appm3.xem3 wrints genbase
 	#
@@ -80,5 +88,5 @@ elfload/genbase:
 	cd elfload; make
 
 clean:
-	@rm -f genbase readrprc wrints genextbin *.o ducati-m3.bin tesla-dsp.bin
+	@rm -f genbase readrprc wrints genextbin *.o $(DUCATI) $(TESLA)
 	cd elfload; make clean
