--- a/src/ti/configs/omap4430/DucatiCore0Hdmi.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0Hdmi.cfg
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, Texas Instruments Incorporated
+ * Copyright (c) 2011-2012, Texas Instruments Incorporated
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -30,7 +30,6 @@
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-
 /* -------------------------------- CORE0 ----------------------------------*/
 var MultiProc = xdc.useModule('ti.sdo.utils.MultiProc');
 MultiProc.setConfig("CORE0", ["HOST", "CORE0", "CORE1", "DSP"]);
@@ -53,6 +52,12 @@ timerParams.periodType = Timer.PeriodType_MICROSECS;
 timerParams.tiocpCfg.idlemode = 0x3;
 /* Wake-up generation for Overflow */
 timerParams.twer.ovf_wup_ena = 0x1;
+
+/* Idle functions - PM functions should be last */
+var Idle = xdc.useModule('ti.sysbios.knl.Idle');
+Idle.addFunc('&VirtQueue_cacheWb');    /* Function to flush unicache in idle */
+Idle.addFunc('&ti_deh_Deh_idleBegin'); /* Watchdog detect idle function */
+Idle.addFunc('&IpcPower_idle');        /* IpcPower_idle must be at the end */
 
 /* Pull in HDMI WA solution */
 var hdmiwa = xdc.useModule('ti.hdmiwa.HdmiWa');
