--- a/src/ti/configs/omap4430/DucatiCore1.cfg
+++ b/src/ti/configs/omap4430/DucatiCore1.cfg
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, Texas Instruments Incorporated
+ * Copyright (c) 2011-2012, Texas Instruments Incorporated
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -53,6 +53,12 @@ timerParams.tiocpCfg.idlemode = 0x3;
 /* Wake-up generation for Overflow */
 timerParams.twer.ovf_wup_ena = 0x1;
 Timer.create(Clock.timerId, Clock.doTick, timerParams);
+
+/* Idle functions - PM functions should be last */
+var Idle = xdc.useModule('ti.sysbios.knl.Idle');
+Idle.addFunc('&VirtQueue_cacheWb');    /* Function to flush unicache in idle */
+Idle.addFunc('&ti_deh_Deh_idleBegin'); /* Watchdog detect idle function */
+Idle.addFunc('&IpcPower_idle');        /* IpcPower_idle must be at the end */
 
 /*
  * These lines coerce BIOS into creating a unique interrupt vector table for
