--- a/src/ti/configs/omap54xx/IpuCore1.cfg
+++ b/src/ti/configs/omap54xx/IpuCore1.cfg
@@ -54,6 +54,12 @@ timerParams.tiocpCfg.idlemode = 0x3;
 timerParams.twer.ovf_wup_ena = 0x1;
 Timer.create(Clock.timerId, Clock.doTick, timerParams);
 
+/* Idle functions - PM functions should be last */
+var Idle = xdc.useModule('ti.sysbios.knl.Idle');
+Idle.addFunc('&VirtQueue_cacheWb');    /* Function to flush unicache in idle */
+Idle.addFunc('&ti_deh_Deh_idleBegin'); /* Watchdog detect idle function */
+Idle.addFunc('&IpcPower_idle');        /* IpcPower_idle must be at the end */
+
 /*
  * These lines coerce BIOS into creating a unique interrupt vector table for
  * each core. Core 0's interrupt vector table is placed at 0x400, Core 1's
