Configs: Enable named instances for the Task module
By enabling the namedInstance field in the Task module, the name
associated with the task at the moment of creation will persist.
This improves the usability of tools that display instance objects.

Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>

--- a/src/ti/configs/omap4430/Tesla.cfg
+++ b/src/ti/configs/omap4430/Tesla.cfg
@@ -81,6 +81,7 @@ var GateSwi   = xdc.useModule('ti.sysbios.gates.GateSwi');
 
 var Task          = xdc.useModule('ti.sysbios.knl.Task');
 Task.deleteTerminatedTasks = true;
+Task.common$.namedInstance = true;
 
 var Assert = xdc.useModule('xdc.runtime.Assert');
 var Defaults = xdc.useModule('xdc.runtime.Defaults');
