--- a/src/ti/configs/omap54xx/Dsp.cfg
+++ b/src/ti/configs/omap54xx/Dsp.cfg
@@ -81,6 +81,7 @@ var GateSwi   = xdc.useModule('ti.sysbios.gates.GateSwi');
 
 var Task          = xdc.useModule('ti.sysbios.knl.Task');
 Task.deleteTerminatedTasks = true;
+Task.common$.namedInstance = true;
 
 var Assert = xdc.useModule('xdc.runtime.Assert');
 var Defaults = xdc.useModule('xdc.runtime.Defaults');
