Configs: Set the dmTimer frequency limits for OMAP5 boards
The OMAP5 config files are still building against the OMAP4 M3 target
at present, but the SYS_CLK is sourced at a different clock rate on
the OMAP5 boards. The dmTimer settings are programmed in SYS/BIOS by
looking up the OMAP4 values and therefore is causing a runtime
frequency mismatch error within the BIOS code. These values have
been overridden as per the clock rates seen on OMAP5 boards.

These changes can be reverted once the appropriate BIOS version and
build change to OMAP5 M4 target are picked up.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap54xx/Dsp.cfg
+++ b/src/ti/configs/omap54xx/Dsp.cfg
@@ -122,6 +122,12 @@ Clock.tickSource = Clock.TickSource_USER;
 Clock.timerId = 0;
 
 var Timer = xdc.useModule('ti.sysbios.timers.dmtimer.Timer');
+
+/* Match this to the SYS_CLK frequency sourcing the dmTimers.
+ * Not needed once the SYS/BIOS family settings is updated. */
+Timer.intFreq.hi = 0;
+Timer.intFreq.lo = 19200000;
+
 var timerParams = new Timer.Params();
 timerParams.period = Clock.tickPeriod;
 timerParams.periodType = Timer.PeriodType_MICROSECS;
