Configs: Include the OMX Service Manager module
The OMX Service Manager module has to be invoked in the
config files to link the ti.srvmgr.omx library in the
final base images, and register the OMX service with the
ServiceMgr module.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap4430/Tesla.cfg
+++ b/src/ti/configs/omap4430/Tesla.cfg
@@ -52,6 +52,7 @@ BIOS.libType    = BIOS.LibType_Debug;
 
 xdc.loadPackage('ti.ipc.rpmsg');
 xdc.loadPackage('ti.srvmgr');
+xdc.useModule('ti.srvmgr.omx.OmxSrvMgr');
 xdc.loadPackage('ti.resmgr');
 
 /* Enable Memory Translation module that operates on the BIOS Resource Table */
