--- a/src/ti/configs/omap54xx/Dsp.cfg
+++ b/src/ti/configs/omap54xx/Dsp.cfg
@@ -52,6 +52,7 @@ BIOS.libType    = BIOS.LibType_Debug;
 
 xdc.loadPackage('ti.ipc.rpmsg');
 xdc.loadPackage('ti.srvmgr');
+xdc.useModule('ti.srvmgr.omx.OmxSrvMgr');
 xdc.loadPackage('ti.resmgr');
 
 /* Enable Memory Translation module that operates on the BIOS Resource Table */
