Build: Display C6x CGT info and other minor cleanup
The Makefile has been slightly revised to print the previously
missing C6x tools information. The XDC path variable has been
updated to look like the BIOS and IPC variables.

Other minor cleanup includes deleting the missing xdep on clean,
and fixing up the indentation of different assignments.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -101,5 +101,5 @@ elfload/genbase:
 	cd elfload; make
 
 clean:
-	@rm -f genbase readrprc wrints genextbin *.o $(DUCATI) $(TESLA) $(IPU) $(DSP)
+	@rm -f genbase readrprc wrints genextbin xdep *.o $(DUCATI) $(TESLA) $(IPU) $(DSP)
 	cd elfload; make clean
