Configs: Include the Version module
Pull in the Version module that automatically retrieves the
tools and source tree information for both sysbios-rpmsg and
the destination base image tree, and stores in a special
".version" memory section.

Signed-off-by: Juan Gutierrez <jgutierrez@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap54xx/Dsp.cfg
+++ b/src/ti/configs/omap54xx/Dsp.cfg
@@ -147,3 +147,6 @@ Timer.create(Clock.timerId, Clock.doTick, timerParams);
 
 Program.sectMap[".tracebuf"] = "TRACE_BUF";
 Program.sectMap[".errorbuf"] = "EXC_DATA";
+
+/* Version module */
+xdc.useModule('ti.utils.Version');
