--- a/src/ti/configs/omap54xx/Dsp.cfg
+++ b/src/ti/configs/omap54xx/Dsp.cfg
@@ -123,6 +123,9 @@ Clock.timerId = 0;
 
 var Timer = xdc.useModule('ti.sysbios.timers.dmtimer.Timer');
 
+/* Skip the Timer frequency verification check. Need to remove this later */
+Timer.checkFrequency = false;
+
 /* Match this to the SYS_CLK frequency sourcing the dmTimers.
  * Not needed once the SYS/BIOS family settings is updated. */
 Timer.intFreq.hi = 0;
