Configs: Fix incorrect AMMU configuration of DSP small page #1
The new SYS/BIOS version 6.33.06.50 is incorrectly programming
the small page entry #1 of DSP AMMU to values that are pertinent
to ARM M3/M4 targets. The work around for this SYS/BIOS bug is to
reprogram this entry to valid values for DSP.

This change is added to both the OMAP4 and OMAP5 DSP AMMU config
files, and can be reverted once the bug is fixed in SYS/BIOS.

Signed-off-by: Alan DeMars <ademars@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/ti/configs/omap4430/TeslaAmmu.cfg
+++ b/src/ti/configs/omap4430/TeslaAmmu.cfg
@@ -58,6 +58,15 @@ else {
 /* -------------------------------- AMMU -----------------------------------*/
 var AMMU = xdc.useModule('ti.sysbios.hal.ammu.AMMU');
 
+/*********************** Small Pages *************************/
+/* Work-around for bug in BIOS 6.33.06.50 */
+AMMU.smallPages[1].pageEnabled = AMMU.Enable_YES;
+AMMU.smallPages[1].logicalAddress = 0x01c30000;
+AMMU.smallPages[1].translationEnabled = AMMU.Enable_NO;
+AMMU.smallPages[1].size = AMMU.Small_4K;
+AMMU.smallPages[1].L1_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+AMMU.smallPages[1].L2_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+
 /*********************** Medium Pages *************************/
 /* config medium page[0] to map 1MB VA 0x01d00000 to 0x01dFFFFF */
 /* ABE NC region */
