--- a/src/ti/configs/omap54xx/DspAmmu.cfg
+++ b/src/ti/configs/omap54xx/DspAmmu.cfg
@@ -58,6 +58,15 @@ else {
 /* -------------------------------- AMMU -----------------------------------*/
 var AMMU = xdc.useModule('ti.sysbios.hal.ammu.AMMU');
 
+/*********************** Small Pages *************************/
+/* Work-around for bug in BIOS 6.33.06.50 */
+AMMU.smallPages[1].pageEnabled = AMMU.Enable_YES;
+AMMU.smallPages[1].logicalAddress = 0x01c30000;
+AMMU.smallPages[1].translationEnabled = AMMU.Enable_NO;
+AMMU.smallPages[1].size = AMMU.Small_4K;
+AMMU.smallPages[1].L1_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+AMMU.smallPages[1].L2_cacheable = AMMU.CachePolicy_NON_CACHEABLE;
+
 /*********************** Medium Pages *************************/
 /* config medium page[0] to map 1MB VA 0x01d00000 to 0x01dFFFFF */
 /* ABE NC region */
