Utils: Add a new genextelf utility for pre-signing images
A new utility, called "genextelf", is added that processes an IPU
ELF image and gives out an extended pre-signed ELF image. The ELF
image outputed would be fed into a signing tool to generate the
final signed IPU image.

The utility adds new sections to the image with the various data
needed for the signing process such as MMU entries, the TOC data
etc. The genextelf utility is similar to the genextbin utility,
which was used for signing the binary files.

Signed-off-by: Shahid Akhtar <sakhtar@ti.com>
Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -47,7 +47,7 @@ ifneq ($(BUILD_SMP),1)
 endif
 endif
 
-all: readrprc wrints genbase genextbin xdep $(DUCATI) $(TESLA) $(IPU) $(DSP)
+all: readrprc wrints genbase genextbin genextelf xdep $(DUCATI) $(TESLA) $(IPU) $(DSP)
 
 ducati-m3.bin: ../ti/examples/srvmgr/ti_platform_omap4430_core0/debug/test_omx_sysm3.xem3 ../ti/examples/srvmgr/ti_platform_omap4430_core1/debug/test_omx_appm3.xem3 wrints genbase
 	#
@@ -83,6 +83,7 @@ CFLAGS = -Wall -m32
 RPRCOBJ = readrprc.o
 WRNTOBJ = wrints.o
 GBINOBJ = genextbin.o
+GELFOBJ = genextelf.o
 XDEPOBJ = xdep.o
 
 readrprc: $(RPRCOBJ)
@@ -103,6 +104,12 @@ genextbin: $(GBINOBJ)
 genextbin.o: genextbin.c
 	gcc $(CFLAGS) -c -o $@ $<
 
+genextelf: $(GELFOBJ)
+	gcc $(CFLAGS) -o $@ $(GELFOBJ)
+
+genextelf.o: genextelf.c
+	gcc $(CFLAGS) -c -o $@ $<
+
 xdep: $(XDEPOBJ)
 	gcc $(CFLAGS) -o $@ $(XDEPOBJ)
 
@@ -116,5 +123,5 @@ elfload/genbase:
 	cd elfload; make
 
 clean:
-	@rm -f genbase readrprc wrints genextbin xdep *.o $(DUCATI) $(TESLA) $(IPU) $(DSP)
+	@rm -f genbase readrprc wrints genextbin genextelf xdep *.o $(DUCATI) $(TESLA) $(IPU) $(DSP)
 	cd elfload; make clean
