--- a/src/ti/configs/omap4430/DucatiCore0.cfg
+++ b/src/ti/configs/omap4430/DucatiCore0.cfg
@@ -54,6 +54,11 @@ timerParams.tiocpCfg.idlemode = 0x3;
 timerParams.twer.ovf_wup_ena = 0x1;
 Timer.create(Clock.timerId, Clock.doTick, timerParams);
 
+/* Modules used in Power Management */
+xdc.loadPackage('ti.pm');
+var Power = xdc.useModule('ti.sysbios.family.arm.ducati.omap4430.Power');
+Power.loadSegment = "PM_DATA";
+
 /* Idle functions - PM functions should be last */
 var Idle = xdc.useModule('ti.sysbios.knl.Idle');
 Idle.addFunc('&VirtQueue_cacheWb');    /* Function to flush unicache in idle */
