--- a/src/ti/configs/omap54xx/IpuSmp.cfg
+++ b/src/ti/configs/omap54xx/IpuSmp.cfg
@@ -30,6 +30,10 @@
  * EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+/* Configure BIOS for SMP-mode */
+var BIOS = xdc.useModule('ti.sysbios.BIOS');
+BIOS.smpEnabled = true;
+
 /* -------------------------------- CORE0 ----------------------------------*/
 var MultiProc = xdc.useModule('ti.sdo.utils.MultiProc');
 MultiProc.setConfig("CORE0", ["HOST", "CORE0", "CORE1", "DSP"]);
